# greencompute-frontend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  xgb_carbon_model.pkl
.github/workflows/: actions.yml
.streamlit/: config.toml
greencompute_frontend/: alpha.py  app.py  constants.py  formatting.py  helper.py  interface_v0_RZ.py  utils.py
greencompute_frontend/Updates/: app.py  pue_model.py  xgb_pue_sklearn.pkl
greencompute_frontend/data/: cloud_embodied_emissions.csv
greencompute_frontend/model/: power_ssj2008-results-20240912-193753.csv  pue_model.py  rf_server_model_3vars.pkl  server_model.py  xgb_pue_model.pkl
greencompute_frontend/pages/: 1_Background.py  2_About_Us.py  3_Maintenance.py  4_Chat.py  about.py  background.py  chat.py  compute.py  compute_v2.py  home.py
greencompute_frontend/updated_IT_electricity_model/: 1_Background.py  2_About_Us.py  IT_electricity_active_idle_models.py  app.py  rf_activeidle_model.pkl
greencompute_v0/: Cloud Carbon Footprint - Embodied Emissions.csv  Compute.py  cloud_model.py  requirements.txt  spec_data_clean.csv
greencompute_v0/pages/: 1_Background.py  2_About_Us.py
notebooks/: main.ipynb
tests/: test_alpha.py
