[tool.poetry]
name = "greencompute_frontend"
version = "0.0.0"
description = ""
authors = ["Elias Tavarez <etav@berkeley.edu>"]
readme = "README.md"
packages = [{ include = "greencompute_frontend", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
plotly = "^5.24.1"
python-dotenv = "^1.0.1"
xgboost = "^2.1.1"
scikit-learn = "1.3.0"
loguru = "^0.7.2"
matplotlib = "^3.9.2"
millify = "^0.1.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
loguru = "^0.7.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"


[tool.poetry.group.lint.dependencies]
pre-commit = "^3.7.1"

[tool.ruff]
line-length = 220

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
